Import of CELOGEEK/WWW-Shorten-SCK-0.1 from CPAN.
gitpan-cpan-distribution: WWW-Shorten-SCK
gitpan-cpan-version:      0.1
gitpan-cpan-path:         CELOGEEK/WWW-Shorten-SCK-0.1.tar.gz
gitpan-cpan-author:       CELOGEEK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300017, CPAN::Meta::Converter version 2.120630'
+generated_by: 'Dist::Zilla version 4.300020, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,10 +22,200 @@ requires:
   Carp: 0
   Exporter: 0
   WWW::Shorten::generic: 0
-  base: 0
-  perl: 5.008
+  parent: 0
+  perl: 5.006
   strict: 0
+  vars: 0
   warnings: 0
 resources:
-  repository: https://github.com/celogeek/WWW-Shorten-SCK.git
-version: 0.002
+  bugtracker: https://github.com/celogeek/WWW-Shorten-SCK/issues
+  homepage: https://github.com/celogeek/WWW-Shorten-SCK/wiki
+  repository: git://github.com/celogeek/WWW-Shorten-SCK.git
+version: 0.1
+x_Dist_Zilla:
+  plugins:
+    -
+      class: Dist::Zilla::Plugin::Git::NextVersion
+      name: '@Author::Celogeek/Git::NextVersion'
+      version: 1.121820
+    -
+      class: Dist::Zilla::Plugin::NextRelease
+      name: '@Author::Celogeek/NextRelease'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::Git::Check
+      name: '@Author::Celogeek/@Git/Check'
+      version: 1.121820
+    -
+      class: Dist::Zilla::Plugin::Git::Commit
+      name: '@Author::Celogeek/@Git/Commit'
+      version: 1.121820
+    -
+      class: Dist::Zilla::Plugin::Git::Tag
+      name: '@Author::Celogeek/@Git/Tag'
+      version: 1.121820
+    -
+      class: Dist::Zilla::Plugin::Git::Push
+      name: '@Author::Celogeek/@Git/Push'
+      version: 1.121820
+    -
+      class: Dist::Zilla::Plugin::GatherDir
+      name: '@Author::Celogeek/@Filter/GatherDir'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::PruneCruft
+      name: '@Author::Celogeek/@Filter/PruneCruft'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::ManifestSkip
+      name: '@Author::Celogeek/@Filter/ManifestSkip'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::MetaYAML
+      name: '@Author::Celogeek/@Filter/MetaYAML'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::License
+      name: '@Author::Celogeek/@Filter/License'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::Readme
+      name: '@Author::Celogeek/@Filter/Readme'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::ExtraTests
+      name: '@Author::Celogeek/@Filter/ExtraTests'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::ExecDir
+      name: '@Author::Celogeek/@Filter/ExecDir'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::ShareDir
+      name: '@Author::Celogeek/@Filter/ShareDir'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::Manifest
+      name: '@Author::Celogeek/@Filter/Manifest'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::TestRelease
+      name: '@Author::Celogeek/@Filter/TestRelease'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::ConfirmRelease
+      name: '@Author::Celogeek/@Filter/ConfirmRelease'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::UploadToCPAN
+      name: '@Author::Celogeek/@Filter/UploadToCPAN'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::ModuleBuild
+      name: '@Author::Celogeek/ModuleBuild'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::ReportVersions
+      name: '@Author::Celogeek/ReportVersions'
+      version: 1.110730
+    -
+      class: Dist::Zilla::Plugin::OurPkgVersion
+      name: '@Author::Celogeek/OurPkgVersion'
+      version: 0.004000
+    -
+      class: Dist::Zilla::Plugin::Prepender
+      name: '@Author::Celogeek/Prepender'
+      version: 1.112280
+    -
+      class: Dist::Zilla::Plugin::AutoPrereqs
+      name: '@Author::Celogeek/AutoPrereqs'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::Prereqs
+      config:
+        Dist::Zilla::Plugin::Prereqs:
+          phase: runtime
+          type: requires
+      name: '@Author::Celogeek/Prereqs'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::MinimumPerl
+      name: '@Author::Celogeek/MinimumPerl'
+      version: 1.003
+    -
+      class: Dist::Zilla::Plugin::Test::Compile
+      name: '@Author::Celogeek/Test::Compile'
+      version: 1.112820
+    -
+      class: Dist::Zilla::Plugin::CheckChangeLog
+      name: '@Author::Celogeek/CheckChangeLog'
+      version: 0.01
+    -
+      class: Dist::Zilla::Plugin::Test::UnusedVars
+      name: '@Author::Celogeek/Test::UnusedVars'
+      version: 2.000003
+    -
+      class: Dist::Zilla::Plugin::PodCoverageTests
+      name: '@Author::Celogeek/PodCoverageTests'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::PruneFiles
+      name: '@Author::Celogeek/PruneFiles'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::ReadmeMarkdownFromPod
+      name: '@Author::Celogeek/ReadmeMarkdownFromPod'
+      version: 0.120120
+    -
+      class: Dist::Zilla::Plugin::MetaResourcesFromGit
+      name: '@Author::Celogeek/MetaResourcesFromGit'
+      version: 1.103620
+    -
+      class: Dist::Zilla::Plugin::MetaConfig
+      name: '@Author::Celogeek/MetaConfig'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::PodWeaver
+      name: '@Author::Celogeek/PodWeaver'
+      version: 3.101641
+    -
+      class: Dist::Zilla::Plugin::Run::BeforeRelease
+      name: '@Author::Celogeek/Run::BeforeRelease'
+      version: 0.013
+    -
+      class: Dist::Zilla::Plugin::PerlTidy
+      name: '@Author::Celogeek/PerlTidy'
+      version: 0.12
+    -
+      class: Dist::Zilla::Plugin::Test::Perl::Critic
+      name: '@Author::Celogeek/Test::Perl::Critic'
+      version: 2.112410
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':InstallModules'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':IncModules'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':TestFiles'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ExecFiles'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ShareFiles'
+      version: 4.300020
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':MainModule'
+      version: 4.300020
+  zilla:
+    class: Dist::Zilla::Dist::Builder
+    config:
+      is_trial: 0
+    version: 4.300020
