--- a/dist.ini
+++ b/dist.ini
@@ -1,55 +1,6 @@
 name=WWW-Shorten-SCK
-version=0.002
 license = Perl_5
 copyright_holder = celogeek <me@celogeek.com>
 copyright_year = 2011
 
-[@Filter]
-bundle=@Basic
-remove=MakeMaker
-
-;Report
-[ReportVersions]
-
-;Patch code
-[PkgVersion]
-[PodWeaver]
-[NextRelease]
-[Prepender]
-[MinimumPerl]
-[PerlTidy]
-perltidyrc=perltidyrc
-
-;Use Build
-[ModuleBuild]
-[AutoPrereqs]
-
-;Add tests
-[CompileTests]
-[PodCoverageTests]
-[PodSyntaxTests]
-[PodSpellingTests]
-stopwords = Celogeek
-stopwords = SCK
-stopwords = sck
-stopwords = makealongerlink
-stopwords = makeashorterlink
-[CriticTests]
-critic_config=perlcriticrc
-
-[ConsistentVersionTest]
-[MinimumVersionTests]
-[CheckChangeLog]
-[UnusedVarsTests]
-
-;Clean
-[PruneFiles]
-
-;Docs
-[ReadmeMarkdownFromPod]
-
-;meta
-[MetaResources]
-repository.web = https://github.com/celogeek/WWW-Shorten-SCK
-repository.url = https://github.com/celogeek/WWW-Shorten-SCK.git
-repository.type = git
+[@Author::Celogeek]
