Import of CELOGEEK/WWW-Shorten-SCK-0.2 from CPAN.
gitpan-cpan-distribution: WWW-Shorten-SCK
gitpan-cpan-version:      0.2
gitpan-cpan-path:         CELOGEEK/WWW-Shorten-SCK-0.2.tar.gz
gitpan-cpan-author:       CELOGEEK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'WWW::Shorten::SCK - Perl interface to sck.to'
+abstract: 'Perl interface to sck.to'
 author:
   - 'celogeek <me@celogeek.com>'
 build_requires:
@@ -31,7 +31,7 @@ resources:
   bugtracker: https://github.com/celogeek/WWW-Shorten-SCK/issues
   homepage: https://github.com/celogeek/WWW-Shorten-SCK/wiki
   repository: git://github.com/celogeek/WWW-Shorten-SCK.git
-version: 0.1
+version: 0.2
 x_Dist_Zilla:
   plugins:
     -
