Import of CELOGEEK/WWW-Shorten-SCK-0.3 from CPAN.
gitpan-cpan-distribution: WWW-Shorten-SCK
gitpan-cpan-version:      0.3
gitpan-cpan-path:         CELOGEEK/WWW-Shorten-SCK-0.3.tar.gz
gitpan-cpan-author:       CELOGEEK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300020, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300028, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -28,92 +28,94 @@ requires:
   vars: 0
   warnings: 0
 resources:
-  bugtracker: https://github.com/celogeek/WWW-Shorten-SCK/issues
-  homepage: https://github.com/celogeek/WWW-Shorten-SCK/wiki
-  repository: git://github.com/celogeek/WWW-Shorten-SCK.git
-version: 0.2
+  bugtracker: http://tasks.celogeek.com/projects/perl-modules-www-shorten-sck
+  homepage: https://gitorious.celogeek.com/perl-modules/www-shorten-sck
+  repository: git://gitorious.celogeek.com/perl-modules/www-shorten-sck.git
+version: 0.3
 x_Dist_Zilla:
+  perl:
+    version: 5.016002
   plugins:
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
       name: '@Author::Celogeek/Git::NextVersion'
-      version: 1.121820
+      version: 2.003
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Author::Celogeek/NextRelease'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Author::Celogeek/@Git/Check'
-      version: 1.121820
+      version: 2.003
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@Author::Celogeek/@Git/Commit'
-      version: 1.121820
+      version: 2.003
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: '@Author::Celogeek/@Git/Tag'
-      version: 1.121820
+      version: 2.003
     -
       class: Dist::Zilla::Plugin::Git::Push
       name: '@Author::Celogeek/@Git/Push'
-      version: 1.121820
+      version: 2.003
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Author::Celogeek/@Filter/GatherDir'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Author::Celogeek/@Filter/PruneCruft'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::Celogeek/@Filter/ManifestSkip'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::Celogeek/@Filter/MetaYAML'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::Celogeek/@Filter/License'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Author::Celogeek/@Filter/Readme'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Author::Celogeek/@Filter/ExtraTests'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Author::Celogeek/@Filter/ExecDir'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Author::Celogeek/@Filter/ShareDir'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::Celogeek/@Filter/Manifest'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Author::Celogeek/@Filter/TestRelease'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::Celogeek/@Filter/ConfirmRelease'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::Celogeek/@Filter/UploadToCPAN'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::ModuleBuild
       name: '@Author::Celogeek/ModuleBuild'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::ReportVersions
       name: '@Author::Celogeek/ReportVersions'
@@ -129,7 +131,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::Celogeek/AutoPrereqs'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -137,7 +139,7 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: '@Author::Celogeek/Prereqs'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::MinimumPerl
       name: '@Author::Celogeek/MinimumPerl'
@@ -157,11 +159,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::Celogeek/PodCoverageTests'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::PruneFiles
       name: '@Author::Celogeek/PruneFiles'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::ReadmeMarkdownFromPod
       name: '@Author::Celogeek/ReadmeMarkdownFromPod'
@@ -173,7 +175,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::Celogeek/MetaConfig'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::PodWeaver
       name: '@Author::Celogeek/PodWeaver'
@@ -191,31 +193,35 @@ x_Dist_Zilla:
       name: '@Author::Celogeek/Test::Perl::Critic'
       version: 2.112410
     -
+      class: Dist::Zilla::Plugin::MetaResourcesFromGit
+      name: MetaResourcesFromGit
+      version: 1.103620
+    -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300020
+      version: 4.300028
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300020
+      version: 4.300028
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.300020
+    version: 4.300028
