--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,14 @@
 name=WWW-Shorten-SCK
 license = Perl_5
 copyright_holder = celogeek <me@celogeek.com>
-copyright_year = 2011
+copyright_year = 2013
+version = 0.4
 
-[@Author::Celogeek]
-
+[@GRS]
 [MetaResourcesFromGit]
-homepage        = https://gitorious.celogeek.com/perl-modules/www-shorten-sck
-bugtracker.web  = http://tasks.celogeek.com/projects/perl-modules-www-shorten-sck
-repository.url  = git://gitorious.celogeek.com/perl-modules/www-shorten-sck.git
-repository.web  = https://gitorious.celogeek.com/perl-modules/www-shorten-sck
+homepage        = https://tasks.celogeek.com/projects/perl-modules-www-shorten-sck
+bugtracker.web  = https://tasks.celogeek.com/projects/perl-modules-www-shorten-sck
+repository.url  = https://github.com/celogeek/perl-jedi.git
+repository.web  = https://github.com/celogeek/perl-jedi
 repository.type = git
+
