--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Perl interface to sck.to'
+abstract: 'Perl interface to sck.pm'
 author:
   - 'celogeek <me@celogeek.com>'
 build_requires:
@@ -13,7 +13,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300036, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 5.006, CPAN::Meta::Converter version 2.132830'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,6 +22,7 @@ name: WWW-Shorten-SCK
 requires:
   Carp: 0
   Exporter: 0
+  JSON: 0
   URI::Escape: 0
   WWW::Shorten::generic: 0
   parent: 0
@@ -30,10 +31,10 @@ requires:
   vars: 0
   warnings: 0
 resources:
-  bugtracker: https://tasks.celogeek.com/projects/perl-modules-www-shorten-sck
-  homepage: https://tasks.celogeek.com/projects/perl-modules-www-shorten-sck
-  repository: https://github.com/celogeek/perl-jedi.git
-version: 0.4
+  bugtracker: https://github.com/celogeek/WWW-Shorten-SCK/issues
+  homepage: https://github.com/celogeek/WWW-Shorten-SCK
+  repository: https://github.com/celogeek/WWW-Shorten-SCK.git
+version: 0.5
 x_Dist_Zilla:
   perl:
     version: 5.018001
@@ -41,55 +42,55 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@GRS/@Filter/GatherDir'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@GRS/@Filter/PruneCruft'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@GRS/@Filter/ManifestSkip'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@GRS/@Filter/MetaYAML'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::License
       name: '@GRS/@Filter/License'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@GRS/@Filter/Readme'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@GRS/@Filter/ExtraTests'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@GRS/@Filter/ExecDir'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@GRS/@Filter/ShareDir'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@GRS/@Filter/Manifest'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@GRS/@Filter/TestRelease'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@GRS/@Filter/ConfirmRelease'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::ModuleBuild
       name: '@GRS/ModuleBuild'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::ReportVersions
       name: '@GRS/ReportVersions'
@@ -97,7 +98,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::OurPkgVersion
       name: '@GRS/OurPkgVersion'
-      version: 0.004000
+      version: 0.005000
     -
       class: Dist::Zilla::Plugin::Prepender
       name: '@GRS/Prepender'
@@ -105,7 +106,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@GRS/AutoPrereqs'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -113,7 +114,7 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: '@GRS/Prereqs'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::MinimumPerl
       name: '@GRS/MinimumPerl'
@@ -122,12 +123,13 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::Test::Compile
       config:
         Dist::Zilla::Plugin::Test::Compile:
+          filename: t/00-compile.t
           module_finder:
             - ':InstallModules'
           script_finder:
             - ':ExecFiles'
       name: '@GRS/Test::Compile'
-      version: 2.021
+      version: 2.039
     -
       class: Dist::Zilla::Plugin::Test::UnusedVars
       name: '@GRS/Test::UnusedVars'
@@ -135,11 +137,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@GRS/PodCoverageTests'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::PruneFiles
       name: '@GRS/PruneFiles'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::ReadmeMarkdownFromPod
       name: '@GRS/ReadmeMarkdownFromPod'
@@ -147,7 +149,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@GRS/MetaJSON'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::MetaResourcesFromGit
       name: '@GRS/MetaResourcesFromGit'
@@ -155,11 +157,82 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@GRS/MetaConfig'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::PodWeaver
+      config:
+        Dist::Zilla::Plugin::PodWeaver:
+          config_plugin: '@GRS'
+          finder:
+            - ':InstallModules'
+            - ':ExecFiles'
+          plugins:
+            -
+              class: Pod::Weaver::Plugin::EnsurePod5
+              name: '@CorePrep/EnsurePod5'
+              version: 4.004
+            -
+              class: Pod::Weaver::Plugin::H1Nester
+              name: '@CorePrep/H1Nester'
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Name
+              name: '@Default/Name'
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Version
+              name: '@Default/Version'
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Region
+              name: '@Default/prelude'
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Generic
+              name: DESCRIPTION
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Generic
+              name: SYNOPSIS
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Generic
+              name: OVERVIEW
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Collect
+              name: ATTRIBUTES
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Collect
+              name: METHODS
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Collect
+              name: FUNCTIONS
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Leftovers
+              name: '@Default/Leftovers'
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Region
+              name: '@Default/postlude'
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Bugs
+              name: '@Default/Bugs'
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Authors
+              name: '@Default/Authors'
+              version: 4.004
+            -
+              class: Pod::Weaver::Section::Legal
+              name: '@Default/Legal'
+              version: 4.004
       name: '@GRS/PodWeaver'
-      version: 3.101642
+      version: 4.002
     -
       class: Dist::Zilla::Plugin::PerlTidy
       name: '@GRS/PerlTidy'
@@ -169,35 +242,39 @@ x_Dist_Zilla:
       name: '@GRS/Test::Perl::Critic'
       version: 2.112410
     -
+      class: Dist::Zilla::Plugin::Test::Kwalitee::Extra
+      name: '@GRS/Test::Kwalitee::Extra'
+      version: v0.2.0
+    -
       class: Dist::Zilla::Plugin::MetaResourcesFromGit
       name: MetaResourcesFromGit
       version: 1.103620
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300036
+      version: 5.006
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300036
+      version: 5.006
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.300036
+    version: 5.006
