--- a/dist.ini
+++ b/dist.ini
@@ -2,13 +2,13 @@ name=WWW-Shorten-SCK
 license = Perl_5
 copyright_holder = celogeek <me@celogeek.com>
 copyright_year = 2013
-version = 0.4
+version = 0.5
 
 [@GRS]
 [MetaResourcesFromGit]
-homepage        = https://tasks.celogeek.com/projects/perl-modules-www-shorten-sck
-bugtracker.web  = https://tasks.celogeek.com/projects/perl-modules-www-shorten-sck
-repository.url  = https://github.com/celogeek/perl-jedi.git
-repository.web  = https://github.com/celogeek/perl-jedi
+homepage        = https://github.com/celogeek/WWW-Shorten-SCK
+bugtracker.web  = https://github.com/celogeek/WWW-Shorten-SCK/issues
+repository.url  = https://github.com/celogeek/WWW-Shorten-SCK.git
+repository.web  = https://github.com/celogeek/WWW-Shorten-SCK
 repository.type = git
 
